deploy: af8acbcfa6b451c48433a79a365a847ce4ea3770

--- a/about/index.html
+++ b/about/index.html
@@ -13,7 +13,7 @@
 <meta property="og:url" content="http://ai-fast-track.com/blog/about/" />
 <meta property="og:site_name" content="AI Fast Track Blog" />
 <script type="application/ld+json">
-{"description":"Helping to democratize AI and Deep Learning.","headline":"About Me","@type":"WebSite","url":"http://ai-fast-track.com/blog/about/","name":"AI Fast Track Blog","@context":"https://schema.org"}</script>
+{"description":"Helping to democratize AI and Deep Learning.","@type":"WebSite","headline":"About Me","url":"http://ai-fast-track.com/blog/about/","name":"AI Fast Track Blog","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 <link rel="stylesheet" href="/blog/assets/css/style.css"><link type="application/atom+xml" rel="alternate" href="http://ai-fast-track.com/blog/feed.xml" title="AI Fast Track Blog" /><link rel="shortcut icon" type="image/x-icon" href="/blog/images/favicon.ico"><!-- Begin Jekyll SEO tag v2.6.1 -->
 <title>About Me | AI Fast Track Blog</title>
@@ -26,7 +26,7 @@
 <meta property="og:url" content="http://ai-fast-track.com/blog/about/" />
 <meta property="og:site_name" content="AI Fast Track Blog" />
 <script type="application/ld+json">
-{"description":"Helping to democratize AI and Deep Learning.","headline":"About Me","@type":"WebSite","url":"http://ai-fast-track.com/blog/about/","name":"AI Fast Track Blog","@context":"https://schema.org"}</script>
+{"description":"Helping to democratize AI and Deep Learning.","@type":"WebSite","headline":"About Me","url":"http://ai-fast-track.com/blog/about/","name":"AI Fast Track Blog","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 
 <link href="https://unpkg.com/@primer/css/dist/primer.css" rel="stylesheet" />
