--- a/search/index.html
+++ b/search/index.html
@@ -13,7 +13,7 @@
 <meta property="og:url" content="http://ai-fast-track.com/blog/search/" />
 <meta property="og:site_name" content="AI Fast Track Blog" />
 <script type="application/ld+json">
-{"description":"Helping to democratize AI and Deep Learning.","headline":"Search","@type":"WebPage","url":"http://ai-fast-track.com/blog/search/","@context":"https://schema.org"}</script>
+{"description":"Helping to democratize AI and Deep Learning.","@type":"WebPage","headline":"Search","url":"http://ai-fast-track.com/blog/search/","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 <link rel="stylesheet" href="/blog/assets/css/style.css"><link type="application/atom+xml" rel="alternate" href="http://ai-fast-track.com/blog/feed.xml" title="AI Fast Track Blog" /><link rel="shortcut icon" type="image/x-icon" href="/blog/images/favicon.ico"><!-- Begin Jekyll SEO tag v2.6.1 -->
 <title>Search | AI Fast Track Blog</title>
@@ -26,7 +26,7 @@
 <meta property="og:url" content="http://ai-fast-track.com/blog/search/" />
 <meta property="og:site_name" content="AI Fast Track Blog" />
 <script type="application/ld+json">
-{"description":"Helping to democratize AI and Deep Learning.","headline":"Search","@type":"WebPage","url":"http://ai-fast-track.com/blog/search/","@context":"https://schema.org"}</script>
+{"description":"Helping to democratize AI and Deep Learning.","@type":"WebPage","headline":"Search","url":"http://ai-fast-track.com/blog/search/","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 
 <link href="https://unpkg.com/@primer/css/dist/primer.css" rel="stylesheet" />
