--- a/about/index.html
+++ b/about/index.html
@@ -90,7 +90,7 @@ window.onload = wrap_img;
   <li>Helping to democratize AI / Deep Learning</li>
   <li>Happy to share all what I learned with all people no matter their background</li>
   <li>Hanging around at the most open and most welcoming deep learning community: <a href="https://forums.fast.ai/">fastai</a></li>
-  <li>Trying to contribute to fastai community as much as I can: Learning from them and giving back.</li>
+  <li>Trying to contribute to fastai community as much as I can: Learning with them and giving back.</li>
   <li>Presently working in developing the <a href="https://github.com/ai-fast-track/timeseries/">timeseries</a> package: a time series analysis package using deep learning for <a href="https://github.com/fastai/fastai2">fastai2</a> library</li>
 </ul>
 
